feat: add 2 new events
- Add 'Sfeir Lunch' event,
- Add 'Ch'feir Share' event.

Closes #2
Closes #3

--- a/app/templates/README.adoc
+++ b/app/templates/README.adoc
@@ -1,4 +1,4 @@
-= <%= eventTemplate %> - <%= title %>
+= <%= eventTemplate %> - <%= fullTitle %>
 :uri-bespoke: http://markdalgleish.com/projects/bespoke.js
 :uri-node: https://nodejs.org
 :uri-nvm: https://github.com/creationix/nvm
